# info_segugio

./: README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
public/: app.css  theme.json
src/info_segugio/: __init__.py  config.py  prompts.py
