[project]
name = "info-segugio"
version = "0.1.0"
description = ""
authors = [
    {name = "samuelecapellino",email = "cappeplaysamu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "chainlit (>=2.11.1,<3.0.0)",
    "openai (>=2.43.0,<3.0.0)",
    "tavily-python (>=0.7.26,<0.8.0)"
]

[tool.poetry]
packages = [{include = "info_segugio", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
